--- a/.github/actions/hello-world/action.yml
+++ b/.github/actions/hello-world/action.yml
@@ -1,6 +1,9 @@
 name: "my hello action"
 
 description: "say hello with GitHub Actions"
+branding:
+  icon: 'award'
+  color: 'green'
 
 runs:
   using: "node12"
